--- a/shangguigu/html+css/vw+less/reset.css
+++ b/shangguigu/html+css/vw+less/reset.css
@@ -51,7 +51,7 @@
    text-decoration: none;
    -webkit-backface-visibility: hidden;
  }
- ::-webkit-scrollbar{
+ /* ::-webkit-scrollbar{
    width: 5px;
    height: 5px;
  }
@@ -68,9 +68,8 @@
    width: 5px;
    background-color: rgba(125, 125, 125, 0.7);
    -webkit-border-radius: 6px;
- }
+ } */
  html, body{
-   width: 100%;
    font-family: "Arial", "Microsoft YaHei", "黑体", "宋体", "微软雅黑", sans-serif;
  }
  body{
@@ -78,9 +77,9 @@
    -webkit-text-size-adjust: none;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
- html{
+ /* html{
    overflow-y: scroll;
- }
+ } */
   
  /*清除浮动*/
  .clearfix:before,
